tests/typing/bad/testfile-context_seq1-1.scala
class A { def m() { var x: Int = y; var y: Int = 1 } }
object Main { def main(args: Array[String]) { } }
